--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
 		</ol>
 		<div class="commentbox"></div>
 	</body>
-	<script>commentBox("5688871626997760");</script>
+	<script>commentBox("5688871626997760-proj");</script>
 </html>
