--- a/index.html
+++ b/index.html
@@ -12,37 +12,56 @@
 		<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
 	</head>
 	<body>
-		<nav id="topMenu" style="">
+    <div id="bg"></div>
+		<nav id="topMenu">
+    <img src="\fullLogo.svg" height="25">
+    
 			<li class="horizontal">item 1</li>
 			<li class="horizontal">item 2</li>
 		</nav>
 		<div id="layout">
 			<div id="leftMenu" class="flex-row sideMenu">
-			left menu
+			<div id="sideMenuContent">
+				<a class="sideMenuLink" href=#> Basic SVGs</a>
+				<a class="sideMenuLink" href=#> Projects</a>
+				<a class="sideMenuLink" href=#> Video Tutorials</a>
+				<a class="sideMenuLink" href=#> Articles</a>
 			</div>
+			</div>
+			
+            <div id="wrapperDiv">
 			<div id="mainContent" class="flex-row">
 			<h1 class="centeredText">How to setup inkscape for use with cutting machines (Work In Progress)</h1>
 			<h2>This guide assumes you are using the latest version of <a href="https://inkscape.org/">Inkscape</a> (1.0.1) at the time this was written</h2>
-			<p>When you use inkscape to make designs for cutting machines in inkscape the svgs you make will usually be much larger when you import them into the software you use to cut them. For example if you create an svg in that is just a 1 inch by 1 inch rectangle when you upload it to cricut design space and insert it into your project it will be 1.333 by 1.333 inches. This can really be really annoying when you're trying to fit a new cut or drawing onto an existing design, when you're making somehting like a card where you need to know the finished size or anything that requires precise measurements like my motion activated cards. I've found a few different ways to fix this issue, each with their own pros and cons that I'll cover here</p><hr>
+			<p>When you use inkscape to make designs for cutting machines in inkscape the svgs you make will usually be much larger when you import them into the software you use to cut them. For example if you create an svg in that is just a 1 inch by 1 inch rectangle when you upload it to cricut design space and insert it into your project it will be 1.333 by 1.333 inches. This can really be really annoying when you're trying to fit a new cut or drawing onto an existing design, when you're making somehting like a card where you need to know the finished size or anything that requires precise measurements like my motion activated cards. I've found a few different ways to fix this issue, each with their own pros and cons that I'll cover here</p></div><div class="flex-row" id="article">
 				<h3>Scale everything in the design:</h3>
 				<p>This is the quickest and easiest method and if you just have a single object or a simple design or you mainly use other programs and only use inkscape ocassionally. It's much less complex than the others.
-				<ol>
-					<li>In the top inkscape menu click on edit > select all in all layers</li>
+				</p><ol>
+					<li>In the top inkscape menu click on edit &gt; select all in all layers</li>
 					<li>Next click object from the top menu and click Transform</li>
 					<li>In the dialog that comes up on the right side make sure scale proportionally is checked. Set the units to % and change one of the boxes to 75%. press enter/return and the other box will change to 75% also. Click Apply, then save the file.
-				</ol>
+				</li></ol>
 				<h3>Add a custom unit to inkscape and make a template file:</h3>
 				<p>This is my preferred method, you don't have to make changes to the viewport here which is beneficial if you use inkscape for anything else.</p>
 				<ol>
 					<li>Find and open the units.xml file. On a windows system the location of this file depends on how you installed it. If you used an installer like the exe or msi files This file will be in C:\Program Files\Inkscape or C:\Program Files (x86)\inkscape. If you used the portable package, open the folder that you unzipped the package to after you downloaded it. The rest of the process is the same for each version. Open the share folder, then open inkscape, from there open the ui folder and open the file units.xml</li>
 					<li>Create a new unit. In this tutorial I'll be copying the inch unit but you can apply this to any unit you want to use.</li>
 				</ol>
-			<div class="commentbox"></div>
-			</div>
+                </div>
+                </div>
+			
 			<div id="rightMenu" class="flex-row sideMenu">
 			right menu
 			</div>
-		</div>
-	</body>
+			</div>
+			<div id="footerBox">
+				<p id="backgroundCredit">Background Photo by <a class="whiteLink" href="https://www.pexels.com/@efdal-yildiz-325089?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">YILDIZ</a> from <a class="whiteLink"href="https://www.pexels.com/photo/flock-of-birds-917494/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">Pexels.</a> Thank You!</p>
+			<div class="commentbox"></div>
+			</div>
+			<script>alert("This site is currently under construction")</script>
+		
+	
+	<!-- script>commentBox("5633800281260032-proj");</script -->
+</body>
 	<!-- script>commentBox("5633800281260032-proj");</script -->
 </html>
