--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
 				<p id="backgroundCredit">Background Photo by <a class="whiteLink" href="https://www.pexels.com/@efdal-yildiz-325089?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">YILDIZ</a> from <a class="whiteLink"href="https://www.pexels.com/photo/flock-of-birds-917494/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">Pexels.</a> Thank You!</p>
 			<div class="commentbox"></div>
 			</div>
-			<script>alert("This site is currently under construction")</script>
-		
-	
-	<!-- script>commentBox("5633800281260032-proj");</script -->
 </body>
-	<!-- script>commentBox("5633800281260032-proj");</script -->
+	<script>alert("This site is currently under construction");</script>
+	<script>commentBox("5633800281260032-proj");</script>
 </html>
