--- a/index.html
+++ b/index.html
@@ -59,6 +59,5 @@
 			<div class="commentbox"></div>
 			</div>
 </body>
-	<script>alert("This site is currently under construction");</script>
-	<script>commentBox("5633800281260032-proj");</script>
+	<script>commentBox("5633800281260032-proj", {backgroundColor:#f9f9f9});</script>
 </html>
