--- a/index.html
+++ b/index.html
@@ -59,5 +59,5 @@
 			<div class="commentbox"></div>
 			</div>
 </body>
-	<script>commentBox("5633800281260032-proj", {backgroundColor:#f9f9f9});</script>
+	<script>commentBox("5633800281260032-proj", {backgroundColor:"#f9f9f9"});</script>
 </html>
