--- a/redirectTest.html
+++ b/redirectTest.html
@@ -1,2 +1,4 @@
 <!DOCTYPE html>
-<script>window.location.replace(window.location.hostname + "/#/" + window.location.pathname);</script>
+<script>
+  window.location.replace(window.location.hostname + "/#" + window.location.pathname);
+</script>
