--- a/Layout.html
+++ b/Layout.html
@@ -10,5 +10,5 @@
 	<div id="column3" class="layout column black secondRow"></div>
 
 </body>
-<script src="LoadArticle.js"></script>
+<script src="ContentLoader.js"></script>
 </html>
