--- a/Inkscape.html
+++ b/Inkscape.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <script>
-  window.location.replace(window.location.href + "Layout#" + window.location.pathname.split("/")[1]);
+  window.location.replace(window.location.hostnmae + "/Layout#" + window.location.pathname.split("/")[1]);
 </script>
