--- a/about.htm
+++ b/about.htm
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
+<head><link rel="stylesheet" href="about.css"></head>
 <p id="mainContent">I started svg4free to share free project files, share tips on getting the most out of your cutting machines and to provide written and video instructions for making my paid projects that are available through my etsy page. In addition to this I also offer free Inkscape extensions and an Inkscape template file of a 12" x 12" mat</p> 
