--- a/test/index.html
+++ b/test/index.html
@@ -1,2 +1,4 @@
 <!DOCTYPE html>
-<title>test</title>
+<script>
+  window.location.replace(window.location.hostname + "Layout/#" + window.location.pathname);
+</script>
