--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <script>
-  window.location.replace(window.location.origin + "/Layout#" + window.location.pathname);
+  window.location.replace(window.location.origin + "/Layout#" + window.location.pathname.split("/")[1]);
 </script>
