--- a/test/content.html
+++ b/test/content.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://svg4free.github.io/test/styles.css">
+<link rel="stylesheet" href="styles.css">
 <p id="mainContent">This is the main content of the page.</p>
