--- a/Layout.html
+++ b/Layout.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" href="layoutTest.css"></head>
+<head>
+	<title>Layout</title>
+	<link rel="stylesheet" href="layoutTest.css">
+</head>
 <body>
 
 	<div id="topMenu" class="black"></div>
