--- a/test/content.html
+++ b/test/content.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
+<title>test page</title>
 <link rel="stylesheet" href="styles.css">
 <p id="mainContent">This is the main content of the page.</p>
