--- a/test/content.html
+++ b/test/content.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <title>test page</title>
 <link rel="stylesheet" href="styles.css">
+<script src="test.js"></script>
 <p id="mainContent">This is the main content of the page.</p>
