--- a/Layout.html
+++ b/Layout.html
@@ -1,4 +1,9 @@
-<html><head><link rel="stylesheet" href="layoutTest.css"><link rel="stylesheet"></head>
+<html>
+	<head>
+		<title>Layout Page</title>
+		<link rel="stylesheet" href="layoutTest.css">
+		<link rel="stylesheet">
+	</head>
 	<body>
 		<div id="topMenu" class="black"></div>
 			<div id="column1" class="layout column black secondRow sideMenu">
