--- a/Inkscape/index.html
+++ b/Inkscape/index.html
@@ -1,75 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>How to setup inkscape for use with cutting machines</title>
-		<meta name="google-site-verification" content="9165u8diPFtKOkkblq-h6QXvlDThg-xAJd6PCYkOmJc" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="styles.css">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-		<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-	</head>
-	<body>
-    <div id="bg"></div>
-		<nav id="topMenu">
-    <img src="\fullLogo.svg" height="25">
-    
-			<li class="horizontal">item 1</li>
-			<li class="horizontal">item 2</li>
-		</nav>
-		<div id="layout">
-			<div id="leftMenu" class="flex-row sideMenu">
-			<div id="sideMenuContent">
-				<a class="sideMenuLink" href=#> Basic SVGs</a>
-				<a class="sideMenuLink" href=#> Projects</a>
-				<a class="sideMenuLink" href=#> Video Tutorials</a>
-				<a class="sideMenuLink" href=#> Articles</a>
-			</div>
-			</div>
-			
-            <div id="wrapperDiv">
-			<div id="mainContent" class="flex-row">
-			<h1 class="centeredText">How to setup inkscape for use with cutting machines (Work In Progress)</h1>
-			<h2>This guide assumes you are using the latest version of <a href="https://inkscape.org/">Inkscape</a> (1.0.1) at the time this was written</h2>
-			<p>When you use inkscape to make designs for cutting machines in inkscape the svgs you make will usually be much larger when you import them into the software you use to cut them. For example if you create an svg in that is just a 1 inch by 1 inch rectangle when you upload it to cricut design space and insert it into your project it will be 1.333 by 1.333 inches. This can really be really annoying when you're trying to fit a new cut or drawing onto an existing design, when you're making somehting like a card where you need to know the finished size or anything that requires precise measurements like my motion activated cards. I've found a few different ways to fix this issue, each with their own pros and cons that I'll cover here</p></div><div class="flex-row" id="article">
-				<h3>Scale everything in the design:</h3>
-				<p>This is the quickest and easiest method and if you just have a single object or a simple design or you mainly use other programs and only use inkscape ocassionally. It's much less complex than the others.
-				</p><ol>
-					<li>In the top inkscape menu click on edit &gt; select all in all layers</li>
-					<li>Next click object from the top menu and click Transform</li>
-					<img src="\Inkscape2.png">
-					<li>In the dialog that comes up on the right side make sure scale proportionally is checked. Set the units to % and change one of the boxes to 75%. press enter/return and the other box will change to 75% also. Click Apply, then save the file.
-					<img src="\Inkscape3.png">
-				</li></ol>
-				<h3>Add a custom unit to inkscape and make a template file:</h3>
-				<p>This is my preferred method, you don't have to make changes to the viewport here which is beneficial if you use inkscape for anything else.</p>
-				<ol>
-					<li>Find and open the units.xml file. On a windows system the location of this file depends on how you installed it. If you used an installer like the exe or msi files This file will be in C:\Program Files\Inkscape or C:\Program Files (x86)\inkscape. If you used the portable package, open the folder that you unzipped the package to after you downloaded it. The rest of the process is the same for each version. Open the share folder, then open inkscape, from there open the ui folder and open the file units.xml</li>
-					<p>If you don't have a program installed that can open xml files already, this file will probably try to load in your web browser and we don't want that, so instead of double clicking the file, right click and select open with then notepad</p>
-					<img src="\Inkscape5.png">
-					<li>Create a new unit. In this tutorial I'll be copying the inch unit but you can apply this to any unit you want to use.</li>
-					<p>If you aren't familiar with xml files basically they use tags to store data so you will see tags like this: <span class="red">opening tag:</span>&lt;&gt;<span class="red">closing tag:</span>&lt;/&gt;</p>
-					<p>We're going to copy one of the units tags and just change the scaling.</p>
-					<p>In the xml file look for the inch unit, select all the text for that unit starting with &gt;unit&lt; and ending with &gt;/unit&lt;</p>
-					<img src="\Inkscape6.png">
-					<p>copy that text and paste it directly after one of the &gt;/unit&lt; tags on a new line</p>
-					<img src="\Inkscape7.png">
-					<p>As you can see in the photo, in my file, I've changed the name of the unit that I pasted to jeff, plural to jeffs and the abbreviation to jf. You can use whatever you want for those tags, the important part is the factor tag. For cricut design space, this is 72.0. I changed the description to show "Inches (72 px/jf)" but this optional, you don't even really need to change that and it has no effect on the unit.</p>
-					<p>If you aren't comfortable editing this file yourself you can download a copy of my file here <a href="#">units.xml</a></p>
-				</ol>
-                </div>
-                </div>
-			
-			<div id="rightMenu" class="flex-row sideMenu">
-			right menu
-			</div>
-			</div>
-			<div id="footerBox">
-				<p id="backgroundCredit">Background Photo by <a class="whiteLink" href="https://www.pexels.com/@efdal-yildiz-325089?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">YILDIZ</a> from <a class="whiteLink"href="https://www.pexels.com/photo/flock-of-birds-917494/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">Pexels.</a> Thank You!</p>
-			<div class="commentbox"></div>
-			</div>
-</body>
-	<script>commentBox("5633800281260032-proj", {backgroundColor:"#f9f9f9"});</script>
-</html>
+<!DOCTYPE html>	
+<script>
+  window.location.replace(window.location.origin + "/Layout#" + window.location.pathname.split("/")[1]);
+</script>
