--- a/Inkscape/content.html
+++ b/Inkscape/content.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>How to setup inkscape for use with cutting machines</title>
+<link rel="stylesheet" href="styles.css">
 <div id="mainContent" class="flex-row">
 	<h1 class="centeredText">How to setup inkscape for use with cutting machines (Work In Progress)</h1>
 	<h2>This guide assumes you are using the latest version of <a href="https://inkscape.org/">Inkscape</a> (1.0.1) at the time this was written</h2>
