--- a/Inkscape/content.html
+++ b/Inkscape/content.html
@@ -24,7 +24,7 @@
 			<li>Create a new unit. In this tutorial I'll be copying the inch unit but you can apply this to any unit you want to use.</li>
 			<p>If you aren't familiar with xml files basically they use tags to store data so you will see tags like this: <span class="red">opening tag:</span>&lt;&gt;<span class="red">closing tag:</span>&lt;/&gt;</p>
 			<p>We're going to copy one of the units tags and just change the scaling.</p>
-			<p>In the xml file look for the inch unit, select all the text for that unit starting with &gt;unit&lt; and ending with &gt;/unit&lt;</p>
+			<p>In the xml file look for the inch unit, select all the text for that unit starting with &lt;unit&gt; and ending with &lt;/unit&gt;</p>
 			<img class="articleImage" src="/Inkscape/Inkscape6.PNG">
 			<p>copy that text and paste it directly after one of the &gt;/unit&lt; tags on a new line</p>
 			<img class="articleImage" src="/Inkscape/Inkscape7.PNG">
