--- a/Layout.html
+++ b/Layout.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet">
 	</head>
 	<body>
-		<div id="topMenu" class="black"></div>
+		<div id="topMenu" class="black"><img src="fullLogo.svg" id="logo"></div>
 			<div id="column1" class="layout column black secondRow sideMenu">
 				<a class="sideMenuLink" href="#"> Basic SVGs</a>
 				<a class="sideMenuLink" href="#"> Projects</a>
