--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <script>
-  window.location.replace(window.location.origin + "/about";
+  window.location.replace(window.location.origin + "/about");
 </script>
