--- a/Layout.html
+++ b/Layout.html
@@ -11,6 +11,7 @@
 				<a class="sideMenuLink" href="#"> Projects</a>
 				<a class="sideMenuLink" href="#"> Video Tutorials</a>
 				<a class="sideMenuLink" href="#"> Articles</a>
+				<a class="sideMenuLink" href="/Layout#about"> Articles</a>
 		</div>
 		<div id="column2" class="layout column black secondRow">
 		</div>
